--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,16 +4,21 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "128x128 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo-simple_192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logo-complet_3602x360.png",
+      "type": "image/png",
+      "sizes": "360x360"
+    },
+    {
+      "src": "logo-complet_512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
@@ -21,8 +26,13 @@
       "src": "maskable_icon_x512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any maskable"
-    }
+      "purpose": "maskable"
+    },
+    {
+      "src": "logo-complet_1024x1024.png",
+      "type": "image/png",
+      "sizes": "1024x1024"
+    },
   ],
   "start_url": ".",
   "display": "standalone",
